[workspace]
members = [
  "librubyfmt",
  "librubyfmt/ripper_deserialize"
]

[package]
name = "rubyfmt-main"
version = "0.6.8-pre"
authors = ["Penelope Phippen <penelopedotzone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
filetime = "0.2.14"
glob = "0.3"
libc = "0.2.71"
rubyfmt = { path = "./librubyfmt" }
semver = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.1.1", features = ["json"] }
