[workspace]
members = [
  "librubyfmt",
  "librubyfmt/ripper_deserialize"
]

[package]
name = "rubyfmt-main"
version = "0.10.0"
authors = ["Penelope Phippen <penelopedotzone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "3.2.16", features = ["derive"] }
ctrlc = { version = "3.2", features = ["termination"] }
dirs = "3.0.2"
filetime = "0.2.14"
glob = "0.3"
libc = "0.2.71"
ignore = "0.4.18"
lazy_static = "1.4.0"
regex = "1.6.0"
rubyfmt = { path = "./librubyfmt" }
serde = { version = "1.0", features = ["derive"] }
similar = "2.1.0"
