[package]
name = "rubyfmt"
version = "0.6.8-pre"
authors = ["Penelope Phippen <penelopedotzone@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.40"
backtrace = "0.3.45"
libc = "0.2.68"
ripper_deserialize = { path = "ripper_deserialize" }
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"] }
simplelog = "0.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.0", features = ["disable_initial_exec_tls"], optional=true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["everything"] }

[build-dependencies]
cc = "1.0"

[lib]
name = "rubyfmt"
crate-type = ["staticlib", "rlib"]

[features]
default = ["use_jemalloc"]
use_jemalloc = ["jemallocator"]
