[package]
name = "rubyfmt"
version = "0.8.0-pre"
authors = ["Penelope Phippen <penelopedotzone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.40"
backtrace = "0.3.45"
ripper_deserialize = { path = "ripper_deserialize" }
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"] }
ruby_ops = { path = "ruby_ops" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.0", features = ["disable_initial_exec_tls"], optional=true }

[lib]
name = "rubyfmt"
crate-type = ["staticlib", "rlib"]

[features]
default = ["use_jemalloc"]
use_jemalloc = ["jemallocator"]
