[package]
name = "native"
version = "0.1.0"
authors = ["Sam Phippen <samphippen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.40"
lazy_static = "1.3.0"

[lib]
name = "rubyfmt"
crate-type = ["staticlib"]
