[package]
name = "native"
version = "0.1.0"
authors = ["Penelope Phippen <penelopedotzone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
# Git rev contains:
# https://github.com/serde-rs/serde/pull/1771
serde = { version = "1.0", features=["derive"], git = "https://github.com/sgrif/serde.git", rev = "4250dbeee76d" }
serde_json = "1.0.40"
lazy_static = "1.3.0"
bytecount = "0.6.0"
backtrace = "0.3.45"
jemallocator = { version = "0.3.0", features = ["disable_initial_exec_tls"] }
libc = "0.2.68"
ripper_deserialize = { path = "ripper_deserialize" }

[lib]
name = "rubyfmt"
crate-type = ["staticlib"]
