[package]
name = "ruby_ops"
version = "0.1.0"
authors = ["Reese Williams <reese@reesew.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[dependencies]
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"] }
libc = "0.2.68"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.8"

[build-dependencies]
cc = "1.0"
